benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix023_tso.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix023_tso.yml/mix023_tso.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix023_tso.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c
Compilation started
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c: In function ‘P1’:
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:626:19: error: ‘FALSE’ undeclared (first use in this function)
  626 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:626:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:627:19: error: ‘TRUE’ undeclared (first use in this function)
  627 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c: In function ‘P3’:
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:703:19: error: ‘FALSE’ undeclared (first use in this function)
  703 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:704:19: error: ‘TRUE’ undeclared (first use in this function)
  704 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c: In function ‘main’:
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:794:19: error: ‘FALSE’ undeclared (first use in this function)
  794 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_kfpk8x2q/tmp/tmpeupzzvim.c:795:19: error: ‘TRUE’ undeclared (first use in this function)
  795 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
